--- a/docs/src/samples/postgis-example.yaml
+++ b/docs/src/samples/postgis-example.yaml
@@ -1,17 +1,31 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: postgis-example
+  name: postgis-17
 spec:
   instances: 3
-  imageName: ghcr.io/cloudnative-pg/postgis:14
-  bootstrap:
-    initdb:
-      postInitTemplateSQL:
-        - CREATE EXTENSION postgis;
-        - CREATE EXTENSION postgis_topology;
-        - CREATE EXTENSION fuzzystrmatch;
-        - CREATE EXTENSION postgis_tiger_geocoder;
-
+  imageName: ghcr.io/cloudnative-pg/postgis:17
   storage:
     size: 1Gi
+  postgresql:
+    parameters:
+      log_statement: ddl
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: Database
+metadata:
+  name: postgis-17-app
+spec:
+  name: app
+  owner: app
+  cluster:
+    name: postgis-17
+  extensions:
+  - name: postgis
+    ensure: present
+  - name: postgis_topology
+    ensure: present
+  - name: fuzzystrmatch
+    ensure: present
+  - name: postgis_tiger_geocoder
+    ensure: present
