docs: update PostGIS instructions (#7146)
Leverage the new feature for declarative management of extensions
in the example to deploy PostGIS.

Closes #7144

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/samples/postgis-example.yaml
+++ b/docs/src/samples/postgis-example.yaml
@@ -3,15 +3,25 @@ kind: Cluster
 metadata:
   name: postgis-example
 spec:
-  instances: 3
-  imageName: ghcr.io/cloudnative-pg/postgis:14
-  bootstrap:
-    initdb:
-      postInitTemplateSQL:
-        - CREATE EXTENSION postgis;
-        - CREATE EXTENSION postgis_topology;
-        - CREATE EXTENSION fuzzystrmatch;
-        - CREATE EXTENSION postgis_tiger_geocoder;
-
+  instances: 1
+  imageName: ghcr.io/cloudnative-pg/postgis:17
   storage:
     size: 1Gi
+  postgresql:
+    parameters:
+      log_statement: ddl
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: Database
+metadata:
+  name: postgis-example-app
+spec:
+  name: app
+  owner: app
+  cluster:
+    name: postgis-example
+  extensions:
+  - name: postgis
+  - name: postgis_topology
+  - name: fuzzystrmatch
+  - name: postgis_tiger_geocoder
