feat(ip): Assign copyright to the Linux Foundation
Adopt the new attribution information for contributions to CloudNativePG:

    Copyright © contributors to CloudNativePG, established as
    CloudNativePG a Series of LF Projects, LLC.

Adopt the SPDX format for Apache License 2.0

Closes #7202

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: CloudNativePG
 site_author: The CloudNativePG Contributors
+copyright: Copyright © CloudNativePG a Series of LF Projects, LLC
 docs_dir: src
 
 theme:
